--- a/papers/the-husky-programming-language/main.tex
+++ b/papers/the-husky-programming-language/main.tex
@@ -85,7 +85,7 @@ Let $V^{\text{sources}}$ be all the source vertices and let $S^{\text{source}}:=
 
 Let $V^{\text{incoming}}_v$ be all the incoming vertices of some non-source vertex $v\in V$, and let $S^{\text{incoming}}_v:=\prod_{v\in V^{\text{incoming}}_v}S_v$ be the product of all the value sets associated with incoming vertices of $v$.
 
-Given assigments of generators $g_v$ for each non-source $v\in V\setminus V^{\text{source}}$ a function of type to be specified later, we aim to construct $f_v: S^{\text{source}} \rightarrow S_v$ for each $v\in V$, as follows,
+Given assigments of generators $g_v$ for each non-source $v\in V\setminus V^{\text{source}}$ a function of domains and codomains to be specified later, we aim to construct $f_v: S^{\text{source}} \rightarrow S_v$ for each $v\in V$, as follows,
 
 \begin{itemize}
 	\item First, we specify that for each source vertex $v\in V^{\text{source}}$, $f_v$ is the projection from $T^{\text{source}}$ to $T_v$.
@@ -99,7 +99,7 @@ Given assigments of generators $g_v$ for each non-source $v\in V\setminus V^{\te
 	      \end{equation}
 \end{itemize}
 
-The type of $g_v$ is thus determined to be $\prod\limits_{v'\in V^{\text{incoming}}_{v}}S_{v'}^{S^{\text{source}} }\rightarrow S^{\text{incoming}}_v\rightarrow S_v$.
+The signature of $g_v$ is thus determined to be $g_v:\prod\limits_{v'\in V^{\text{incoming}}_{v}}S_{v'}^{S^{\text{source}} }\rightarrow  S_v^{S^{\text{incoming}}_v}$.
 
 The key takeaway is that we don't specify $f_v$ by simply composing those $f_{v'}$ with $v'$ incoming vertices of $v$ with a fixed function, we specify by generating a function based on incoming vertices and then compose. By setting $g_v$ to be a constant function over the first argument, we recover the ordinary computation graph.
 
